// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats test should create all collections: all stat collections 1`] = `
{
  "collections": {
    "A-collection1.A-sub-collection1-1": {
      "collectionName": "A-collection1.A-sub-collection1-1",
      "stats": {
        "fails": {
          "collectionName": "A-collection1.A-sub-collection1-1",
          "headers": [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": [
            [
              "A-collection1.A-sub-collection1-1",
              "b.txt",
              "J'en sais rien",
            ],
            [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
        "success": {
          "collectionName": "A-collection1.A-sub-collection1-1",
          "headers": [
            "[32msuccess[39m (name)",
            "[32mfile[39m",
          ],
          "name": "success",
          "rows": [
            [
              "A-collection1.A-sub-collection1-1",
              "a.txt",
            ],
          ],
        },
      },
    },
    "A-collection1.B-sub-collection1-2": {
      "collectionName": "A-collection1.B-sub-collection1-2",
      "stats": {
        "fails": {
          "collectionName": "A-collection1.B-sub-collection1-2",
          "headers": [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": [
            [
              "A-collection1.B-sub-collection1-2",
              "b.txt",
              "J'en sais rien",
            ],
            [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
        "success": {
          "collectionName": "A-collection1.B-sub-collection1-2",
          "headers": [
            "[32msuccess[39m (name)",
            "[32mfile[39m",
          ],
          "name": "success",
          "rows": [
            [
              "A-collection1.B-sub-collection1-2",
              "a.txt",
            ],
          ],
        },
      },
    },
    "B-collection2.A-sub-collection.A-sub-sub-collection": {
      "collectionName": "B-collection2.A-sub-collection.A-sub-sub-collection",
      "stats": {
        "fails": {
          "collectionName": "B-collection2.A-sub-collection.A-sub-sub-collection",
          "headers": [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": [
            [
              "B-collection2.A-sub-collection.A-sub-sub-collection",
              "b.txt",
              "J'en sais rien",
            ],
            [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
        "success": {
          "collectionName": "B-collection2.A-sub-collection.A-sub-sub-collection",
          "headers": [
            "[32msuccess[39m (name)",
            "[32mfile[39m",
          ],
          "name": "success",
          "rows": [
            [
              "B-collection2.A-sub-collection.A-sub-sub-collection",
              "a.txt",
            ],
          ],
        },
      },
    },
  },
  "global": {
    "global": {
      "collectionName": "",
      "headers": [
        "name",
        "total",
        "cache hits",
        "successes",
        "fails",
      ],
      "name": "global",
      "rows": [
        [
          "A-collection1.A-sub-collection1-1",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
        [
          "A-collection1.B-sub-collection1-2",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
        [
          "B-collection2.A-sub-collection.A-sub-sub-collection",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
      ],
    },
  },
}
`;

exports[`Stats test should create all collections: stat sub-collections 1`] = `
{
  "collections": {
    "A-sub-sub-collection": {
      "collectionName": "A-sub-sub-collection",
      "stats": {
        "fails": {
          "collectionName": "A-sub-sub-collection",
          "headers": [
            "name",
            "[31mfails[39m",
            "reason",
          ],
          "name": "fails",
          "rows": [
            [
              "A-sub-sub-collection",
              "b.txt",
              "J'en sais rien",
            ],
            [
              "",
              "c.txt",
              "J'en sais rien",
            ],
            [
              "",
              "d.txt",
              "J'en sais rien",
            ],
          ],
        },
        "success": {
          "collectionName": "A-sub-sub-collection",
          "headers": [
            "[32msuccess[39m (name)",
            "[32mfile[39m",
          ],
          "name": "success",
          "rows": [
            [
              "A-sub-sub-collection",
              "a.txt",
            ],
          ],
        },
      },
    },
  },
  "global": {
    "global": {
      "collectionName": "",
      "headers": [
        "name",
        "total",
        "cache hits",
        "successes",
        "fails",
      ],
      "name": "global",
      "rows": [
        [
          "A-sub-sub-collection",
          4,
          "",
          "[32m1 / 4[39m",
          "[31m3 / 4[39m",
        ],
      ],
    },
  },
}
`;

exports[`Stats test should log all collections: all stats as string 1`] = `
[
  "                                                                                                                                                                                                        ",
  "[45m[37m                                                                                         "Stats Test" summary                                                                                           [39m[49m",
  "                                                                                                                                                                                                        ",
  "",
  "╔═══════════════════════════════════════════╗",
  "║ A-collection1 ❯ A-sub-collection1-1 ⟹  su ║",
  "║                   ccess                   ║",
  "╟───────────────────────────────────┬───────╢",
  "║ [32msuccess[39m (name)                    │ [32mfile[39m  ║",
  "╟───────────────────────────────────┼───────╢",
  "║ A-collection1.A-sub-collection1-1 │ a.txt ║",
  "╚═══════════════════════════════════╧═══════╝",
  "",
  "╔════════════════════════════════════════════════════════════╗",
  "║        A-collection1 ❯ A-sub-collection1-1 ⟹  fails        ║",
  "╟───────────────────────────────────┬───────┬────────────────╢",
  "║ name                              │ [31mfails[39m │ reason         ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║ A-collection1.A-sub-collection1-1 │ b.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ c.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ d.txt │ J'en sais rien ║",
  "╚═══════════════════════════════════╧═══════╧════════════════╝",
  "",
  "╔═══════════════════════════════════════════╗",
  "║ A-collection1 ❯ B-sub-collection1-2 ⟹  su ║",
  "║                   ccess                   ║",
  "╟───────────────────────────────────┬───────╢",
  "║ [32msuccess[39m (name)                    │ [32mfile[39m  ║",
  "╟───────────────────────────────────┼───────╢",
  "║ A-collection1.B-sub-collection1-2 │ a.txt ║",
  "╚═══════════════════════════════════╧═══════╝",
  "",
  "╔════════════════════════════════════════════════════════════╗",
  "║        A-collection1 ❯ B-sub-collection1-2 ⟹  fails        ║",
  "╟───────────────────────────────────┬───────┬────────────────╢",
  "║ name                              │ [31mfails[39m │ reason         ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║ A-collection1.B-sub-collection1-2 │ b.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ c.txt │ J'en sais rien ║",
  "╟───────────────────────────────────┼───────┼────────────────╢",
  "║                                   │ d.txt │ J'en sais rien ║",
  "╚═══════════════════════════════════╧═══════╧════════════════╝",
  "",
  "╔═════════════════════════════════════════════════════════════╗",
  "║ B-collection2 ❯ A-sub-collection ❯ A-sub-sub-collection ⟹   ║",
  "║                           success                           ║",
  "╟─────────────────────────────────────────────────────┬───────╢",
  "║ [32msuccess[39m (name)                                      │ [32mfile[39m  ║",
  "╟─────────────────────────────────────────────────────┼───────╢",
  "║ B-collection2.A-sub-collection.A-sub-sub-collection │ a.txt ║",
  "╚═════════════════════════════════════════════════════╧═══════╝",
  "",
  "╔══════════════════════════════════════════════════════════════════════════════╗",
  "║       B-collection2 ❯ A-sub-collection ❯ A-sub-sub-collection ⟹  fails       ║",
  "╟─────────────────────────────────────────────────────┬───────┬────────────────╢",
  "║ name                                                │ [31mfails[39m │ reason         ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────────╢",
  "║ B-collection2.A-sub-collection.A-sub-sub-collection │ b.txt │ J'en sais rien ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────────╢",
  "║                                                     │ c.txt │ J'en sais rien ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────────╢",
  "║                                                     │ d.txt │ J'en sais rien ║",
  "╚═════════════════════════════════════════════════════╧═══════╧════════════════╝",
  "",
  "╔══════════════════════════════════════════════════════════════════════════════════════════════╗",
  "║                                            global                                            ║",
  "╟─────────────────────────────────────────────────────┬───────┬────────────┬───────────┬───────╢",
  "║ name                                                │ total │ cache hits │ successes │ fails ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ A-collection1.A-sub-collection1-1                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ A-collection1.B-sub-collection1-2                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ B-collection2.A-sub-collection.A-sub-sub-collection │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╚═════════════════════════════════════════════════════╧═══════╧════════════╧═══════════╧═══════╝",
  "",
]
`;

exports[`Stats test should log all collections: all stats as string with sorting 1`] = `
"                                                                                
[45m[37m                             "Stats Test" summary                               [39m[49m
                                                                                

╔═════════════════════════════════════════════════════════════╗
║ B-collection2 ❯ A-sub-collection ❯ A-sub-sub-collection ⟹   ║
║                           success                           ║
╟─────────────────────────────────────────────────────┬───────╢
║ [32msuccess[39m (name)                                      │ [32mfile[39m  ║
╟─────────────────────────────────────────────────────┼───────╢
║ B-collection2.A-sub-collection.A-sub-sub-collection │ a.txt ║
╚═════════════════════════════════════════════════════╧═══════╝

╔══════════════════════════════════════════════════════════════════════════════╗
║       B-collection2 ❯ A-sub-collection ❯ A-sub-sub-collection ⟹  fails       ║
╟─────────────────────────────────────────────────────┬───────┬────────────────╢
║ name                                                │ [31mfails[39m │ reason         ║
╟─────────────────────────────────────────────────────┼───────┼────────────────╢
║ B-collection2.A-sub-collection.A-sub-sub-collection │ b.txt │ J'en sais rien ║
╟─────────────────────────────────────────────────────┼───────┼────────────────╢
║                                                     │ c.txt │ J'en sais rien ║
╟─────────────────────────────────────────────────────┼───────┼────────────────╢
║                                                     │ d.txt │ J'en sais rien ║
╚═════════════════════════════════════════════════════╧═══════╧════════════════╝

╔═══════════════════════════════════════════╗
║ A-collection1 ❯ B-sub-collection1-2 ⟹  su ║
║                   ccess                   ║
╟───────────────────────────────────┬───────╢
║ [32msuccess[39m (name)                    │ [32mfile[39m  ║
╟───────────────────────────────────┼───────╢
║ A-collection1.B-sub-collection1-2 │ a.txt ║
╚═══════════════════════════════════╧═══════╝

╔════════════════════════════════════════════════════════════╗
║        A-collection1 ❯ B-sub-collection1-2 ⟹  fails        ║
╟───────────────────────────────────┬───────┬────────────────╢
║ name                              │ [31mfails[39m │ reason         ║
╟───────────────────────────────────┼───────┼────────────────╢
║ A-collection1.B-sub-collection1-2 │ b.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ c.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ d.txt │ J'en sais rien ║
╚═══════════════════════════════════╧═══════╧════════════════╝

╔═══════════════════════════════════════════╗
║ A-collection1 ❯ A-sub-collection1-1 ⟹  su ║
║                   ccess                   ║
╟───────────────────────────────────┬───────╢
║ [32msuccess[39m (name)                    │ [32mfile[39m  ║
╟───────────────────────────────────┼───────╢
║ A-collection1.A-sub-collection1-1 │ a.txt ║
╚═══════════════════════════════════╧═══════╝

╔════════════════════════════════════════════════════════════╗
║        A-collection1 ❯ A-sub-collection1-1 ⟹  fails        ║
╟───────────────────────────────────┬───────┬────────────────╢
║ name                              │ [31mfails[39m │ reason         ║
╟───────────────────────────────────┼───────┼────────────────╢
║ A-collection1.A-sub-collection1-1 │ b.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ c.txt │ J'en sais rien ║
╟───────────────────────────────────┼───────┼────────────────╢
║                                   │ d.txt │ J'en sais rien ║
╚═══════════════════════════════════╧═══════╧════════════════╝

╔══════════════════════════════════════════════════════════════════════════════════════════════╗
║                                            global                                            ║
╟─────────────────────────────────────────────────────┬───────┬────────────┬───────────┬───────╢
║ name                                                │ total │ cache hits │ successes │ fails ║
╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢
║ A-collection1.A-sub-collection1-1                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║
╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢
║ A-collection1.B-sub-collection1-2                   │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║
╟─────────────────────────────────────────────────────┼───────┼────────────┼───────────┼───────╢
║ B-collection2.A-sub-collection.A-sub-sub-collection │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║
╚═════════════════════════════════════════════════════╧═══════╧════════════╧═══════════╧═══════╝
"
`;

exports[`Stats test should log all collections: sub-collection stats as string 1`] = `
[
  "                                                                                                                                                                                                        ",
  "[45m[37m                                                                                         "Stats Test" summary                                                                                           [39m[49m",
  "                                                                                                                                                                                                        ",
  "",
  "╔══════════════════════════════╗",
  "║ A-sub-sub-collection ⟹  succ ║",
  "║             ess              ║",
  "╟──────────────────────┬───────╢",
  "║ [32msuccess[39m (name)       │ [32mfile[39m  ║",
  "╟──────────────────────┼───────╢",
  "║ A-sub-sub-collection │ a.txt ║",
  "╚══════════════════════╧═══════╝",
  "",
  "╔═══════════════════════════════════════════════╗",
  "║         A-sub-sub-collection ⟹  fails         ║",
  "╟──────────────────────┬───────┬────────────────╢",
  "║ name                 │ [31mfails[39m │ reason         ║",
  "╟──────────────────────┼───────┼────────────────╢",
  "║ A-sub-sub-collection │ b.txt │ J'en sais rien ║",
  "╟──────────────────────┼───────┼────────────────╢",
  "║                      │ c.txt │ J'en sais rien ║",
  "╟──────────────────────┼───────┼────────────────╢",
  "║                      │ d.txt │ J'en sais rien ║",
  "╚══════════════════════╧═══════╧════════════════╝",
  "",
  "╔═══════════════════════════════════════════════════════════════╗",
  "║                            global                             ║",
  "╟──────────────────────┬───────┬────────────┬───────────┬───────╢",
  "║ name                 │ total │ cache hits │ successes │ fails ║",
  "╟──────────────────────┼───────┼────────────┼───────────┼───────╢",
  "║ A-sub-sub-collection │ 4     │            │ [32m1 / 4[39m     │ [31m3 / 4[39m ║",
  "╚══════════════════════╧═══════╧════════════╧═══════════╧═══════╝",
  "",
]
`;
